@@ -31,6 +31,10 @@ Post v24.03.0
     has been renamed to "options:ic-route-denylist" in order to comply with
     inclusive language guidelines. The previous name is still recognized to
     aid with backwards compatibility.
+  - Added new global config option NB_Global:options:vxlan_mode to support
+    ability to disable "VXLAN mode" to extend available tunnel IDs space for
+    datapaths from 4095 to 16711680.  For more details see man ovn-nb(5) for
+    mentioned option.
 
 OVN v24.03.0 - 01 Mar 2024
 --------------------------
